--- a/site/resources/styles/themes/slate.css
+++ b/site/resources/styles/themes/slate.css
@@ -262,6 +262,10 @@ ul.menu .menu-item:hover {
   background-color: #3b3b3b;
   border-color: #5d5d5d;
 }
+ul.menu .menu-item:link,
+ul.menu .menu-item:visited {
+  color: #9d9d9d;
+}
 ul.menu .menu-item-description {
   color: #9d9d9d;
 }
