--- a/site/resources/styles/themes/blue_tan.css
+++ b/site/resources/styles/themes/blue_tan.css
@@ -271,6 +271,10 @@ ul.menu .menu-item:hover {
   background-color: #ffffff;
   border-color: #cccccc;
 }
+ul.menu .menu-item:link,
+ul.menu .menu-item:visited {
+  color: #595980;
+}
 ul.menu .menu-item-description {
   color: #595980;
 }
