--- a/site/resources/styles/themes/fog.css
+++ b/site/resources/styles/themes/fog.css
@@ -271,6 +271,10 @@ ul.menu .menu-item:hover {
   background-color: #f6f6f6;
   border-color: #b6b6b6;
 }
+ul.menu .menu-item:link,
+ul.menu .menu-item:visited {
+  color: #626262;
+}
 ul.menu .menu-item-description {
   color: #626262;
 }
