--- a/site/resources/styles/themes/ice.css
+++ b/site/resources/styles/themes/ice.css
@@ -262,6 +262,10 @@ ul.menu .menu-item:hover {
   background-color: #ffffff;
   border-color: #8aabca;
 }
+ul.menu .menu-item:link,
+ul.menu .menu-item:visited {
+  color: #666666;
+}
 ul.menu .menu-item-description {
   color: #666666;
 }
