--- a/site/resources/styles/themes/sea.css
+++ b/site/resources/styles/themes/sea.css
@@ -262,6 +262,10 @@ ul.menu .menu-item:hover {
   background-color: #2d518f;
   border-color: #5f769e;
 }
+ul.menu .menu-item:link,
+ul.menu .menu-item:visited {
+  color: #b0b8c7;
+}
 ul.menu .menu-item-description {
   color: #b0b8c7;
 }
