--- a/site/resources/styles/core/core-values.less
+++ b/site/resources/styles/core/core-values.less
@@ -7,6 +7,17 @@
 
 @minimum_button_width: 2em;
 @minimum_button_height: 2em;
+@button_padding: .4em;
+
+@calendar_box_width: (@page_max_width - @standard_spacing - (8 * @hairline_border_width)) / 7;
+@calendar_box_height: 5em;
+
+@ul_indent: 1.1em;
+@ol_indent: 1.3em;
+@li_indent: .5em;
+@dd_indent: @ul_indent + @li_indent;
+
+@menu_max_width: 200px;
 
 @text_flow_line_height: 160%;
 @compressed_text_flow_line_height: 130%;
