Fixed line-height for info-box-top and info-box-bottom

--- a/site/resources/styles/core/core.less
+++ b/site/resources/styles/core/core.less
@@ -647,7 +647,7 @@ pre > code
 
 .info-box-top
 {
-  line-height: normal;
+  line-height: @info_box_line_height;
   border-bottom: @hairline_border_width solid @standard_border_color;
   margin-bottom: @standard_spacing;
   clear: both;
@@ -655,7 +655,7 @@ pre > code
 
 .info-box-bottom
 {
-  line-height: normal;
+  line-height: @info_box_line_height;
   border-top: @hairline_border_width solid @standard_border_color;
   margin-top: @standard_spacing;
   clear: both;
