--- a/site/resources/styles/core/core-values.less
+++ b/site/resources/styles/core/core-values.less
@@ -21,6 +21,7 @@
 
 @text_flow_line_height: 160%;
 @compressed_text_flow_line_height: 130%;
+@info_box_line_height: @text_flow_line_height;
 
 @page_max_width: 900px;
 @page_min_width: 500px;
