--- a/site/resources/styles/core/core.css
+++ b/site/resources/styles/core/core.css
@@ -425,13 +425,13 @@ pre > code .reserved {
   margin-bottom: 5px;
 }
 .info-box-top {
-  line-height: normal;
+  line-height: 160%;
   border-bottom: 1px solid #c2c2c2;
   margin-bottom: 15px;
   clear: both;
 }
 .info-box-bottom {
-  line-height: normal;
+  line-height: 160%;
   border-top: 1px solid #c2c2c2;
   margin-top: 15px;
   clear: both;
