More forms cleanup: - Picture URL now 100% width rather than artificially shorter - Search box looks OK in short form shown on view_folder and index - Removed unused width-management and stacking feature in the FORM_RENDERER (obsolete) - Removed unneded padding from legend - Fixed formatting for search-field controls - Fixed rendering for tree to show radio buttons or checkboxes aligned to the left

--- a/site/resources/styles/core/core.css
+++ b/site/resources/styles/core/core.css
@@ -1192,6 +1192,9 @@ hr {
   display: block;
   margin-left: 18px;
 }
+.basic-form fieldset fieldset:last-child {
+  margin: 0;
+}
 .basic-form textarea,
 .basic-form select,
 .basic-form input[type=password],
@@ -1311,6 +1314,9 @@ hr {
 }
 .basic-form .browse input {
   width: 200px;
+}
+.basic-form .search input {
+  width: 120px;
 }
 .basic-form input[type=text].tiny,
 .basic-form input[type=password].tiny,
@@ -1529,7 +1535,6 @@ select {
   padding-top: 5px;
 }
 .basic-form fieldset legend {
-  padding: 2px 4px;
   margin-left: -4px;
 }
 .basic-form.ltr fieldset {
