--- a/site/resources/styles/core/form-core.less
+++ b/site/resources/styles/core/form-core.less
@@ -60,6 +60,14 @@
         }
       }
     }
+
+    fieldset
+    {
+      &:last-child
+      {
+        margin: 0;
+      }
+    }
   }
 
   textarea,
@@ -237,6 +245,14 @@
     input
     {
       width: 200px;
+    }
+  }
+
+  .search
+  {
+    input
+    {
+      width: 120px;
     }
   }
 
