--- a/site/resources/styles/core/form-values.less
+++ b/site/resources/styles/core/form-values.less
@@ -1,4 +1,8 @@
 @import "core-values";
 
+@medium-tall-height: 20em;
+@tall-height: 30em;
+@medium-tall-preview-height: 30em;
+@tall-preview-height: 40em;
 @core-label-area-width: 120px;
 @label-area-width: @core-label-area-width + @standard_spacing;
